Ajout Taxi 1 Taxi 2 Taxi 3 Taxi 4 Taxi 5

--- a/film/taxi-4-2007/index.html
+++ b/film/taxi-4-2007/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<link href="/gigastream/film/film.css" rel="stylesheet" type="text/css">
 	<link href="/gigastream/ICON.PNG" rel="icon">
-	<title>Yes Day 2021 | GigaStream</title>
+	<title>Taxi 4 2007 | GigaStream</title>
 </head>
 <body>
 	<header>
@@ -20,10 +20,10 @@
 
 	<br>
 	
-	<h1>Yes Day HDRIP VF</h1>
+	<h1>Taxi 4 HDRIP VF</h1>
 	<h3>Nous vous conseillons d'utiliser un bloqueur de publicité.</h3>
 	<br>
-	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-yf23u9osdh24.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
+	<p class="iframe"><IFRAME SRC="https://uqload.com/embed-w1k9qxyfxqi5.html" FRAMEBORDER=0 MARGINWIDTH=0 MARGINHEIGHT=0 SCROLLING=NO WIDTH=640 HEIGHT=360 allowfullscreen></IFRAME></p>
 
 	<footer>
 		<p class="reglement">GigaStream n'héberge en aucun cas les films et séries proposé et se délaisse de toute responsabilité par rapport à ces programmes.</p>
