--- a/filmrandom/index.html
+++ b/filmrandom/index.html
@@ -8,7 +8,7 @@
             function LienAuHasard()
             {
             var a;
-            a = 1+Math.round(Math.random()*9);
+            a = 1+Math.round(Math.random()*15);
             if (a==1)
             variable("/gigastream/film/black-adam-2022/index.html");
             if (a==2)
@@ -31,6 +31,16 @@
             variable("/gigastream/film/sundays-at-tiffany-s-2010/index.html");
             if (a==11)
             variable("/gigastream/film/yes-day-2021/index.html");
+            if (a==12)
+            variable("/gigastream/film/taxi-1998/index.html");
+            if (a==13)
+            variable("/gigastream/film/taxi-2-2000/index.html");
+            if (a==14)
+            variable("/gigastream/film/taxi-3-2002/index.html");
+            if (a==15)
+            variable("/gigastream/film/taxi-4-2007/index.html");
+            if (a==16)
+            variable("/gigastream/film/taxi-5-2018/index.html");
             }
             </script>
         <meta charset="utf-8">
