--- a/index.html
+++ b/index.html
@@ -21,6 +21,26 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
+					<a href="film/taxi-5-2018/"><img class="affiche" src="film/taxi-5-2018/index.html">
+					<figcaption>Taxi 5</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/taxi-4-2007/"><img class="affiche" src="film/taxi-4-2007/couverture.jpg">
+					<figcaption>Taxi 4</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/taxi-3-2002/"><img class="affiche" src="film/taxi-3-2002/couverture.jpg">
+					<figcaption>Taxi 3</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/taxi-2-2000/"><img class="affiche" src="film/taxi-2-2000/couverture.jpg">
+					<figcaption>Taxi 2</figcaption></a>
+				</figure>
+				<figure>
+					<a href="film/taxi-1998/"><img class="affiche" src="film/taxi-1998/couverture.jpg">
+					<figcaption>Taxi</figcaption></a>
+				</figure>
+				<figure>
 					<a href="film/yes-day-2021/"><img class="affiche" src="film/yes-day-2021/couverture.jpg">
 					<figcaption>Yes Day</figcaption></a>
 				</figure>
@@ -31,26 +51,6 @@
 				<figure>
 					<a href="film/avatar-2009/"><img class="affiche" src="film/avatar-2009/couverture.jpg">
 					<figcaption>Avatar</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/les-minions-2-il-etait-une-fois-gru-2022/"><img class="affiche" src="film/les-minions-2-il-etait-une-fois-gru-2022/couverture.jpg">
-					<figcaption>Les Minions 2 : Il était une fois Gru</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/the-batman-2022/"><img class="affiche" src="film/the-batman-2022/couverture.jpg">
-					<figcaption>The Batman</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/top-gun-maverick-2022/"><img class="affiche" src="film/top-gun-maverick-2022/couverture.jpg">
-					<figcaption>Top Gun</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/black-panther-wakanda-forever-2022/"><img class="affiche" src="film/black-panther-wakanda-forever-2022/couverture.jpg">
-					<figcaption>Black Penther: Wakanda Forever</figcaption></a>
-				</figure>
-				<figure>
-					<a href="film/le-menteur-2022/"><img class="affiche" src="film/le-menteur-2022/couverture.jpg">
-					<figcaption>Le Menteur</figcaption></a>
 				</figure>
 			</div>	
 
