--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<h2>Derniers films ajoutés</h2>
 			<div>
 				<figure>
-					<a href="film/taxi-5-2018/"><img class="affiche" src="film/taxi-5-2018/index.html">
+					<a href="film/taxi-5-2018/"><img class="affiche" src="film/taxi-5-2018/couverture.jpg">
 					<figcaption>Taxi 5</figcaption></a>
 				</figure>
 				<figure>
