--- a/rechercher/index.html
+++ b/rechercher/index.html
@@ -47,6 +47,7 @@
 		<ul class="titre"><a href="../serie/ginny-et-georgia-2021/">Ginny et Georgia</a></ul>
 		<ul class="titre"><a href="../serie/mercredi-2022/">Mercredi</a></ul>
 		<ul class="titre"><a href="../serie/outer-banks-2020/">Outer Banks</a></ul>
+		<ul class="titre"><a href="../serie/squid-game-2021/">Squid Game</a></ul>
 		<ul class="titre"><a href="../serie/teen-wolf-2011/">Teen Wolf</a></ul>
 		<ul class="titre"><a href="../serie/the-end-of-the-f***ing-world-2017/">The End Of The F***ing World</a></ul>
 	</ol>
