--- a/serierandom/index.html
+++ b/serierandom/index.html
@@ -8,7 +8,7 @@
             function LienAuHasard()
             {
             var a;
-            a = 1+Math.round(Math.random()*4);
+            a = 1+Math.round(Math.random()*5);
             if (a==1)
             variable("/gigastream/serie/teen-wolf-2011/");
             if (a==2)
@@ -19,6 +19,8 @@
             variable("/gigastream/serie/ginny-et-georgia-2021/");
             if (a==5)
             variable("/gigastream/serie/outer-banks-2020/");
+            if (a==6)
+            variable("/gigastream/serie/squid-game-2021/");
             }
             </script>
         <meta charset="utf-8">
