--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<link href="index.css" rel="stylesheet">
 		<link href="ICON.PNG" rel="icon">
-		<meta http-equiv="refresh" content="0; URL=http://gigastream.42web.io/index.php">
+		<meta http-equiv="refresh" content="0; URL=https://gigastream.alwaysdata.net/index.php">
 		<title>GigaStream Redirect...</title>
 	</head>
 	<body>
